fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,9 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+
+  --dark-bgcolor: #242424;
+  background-color: var(--dark-bgcolor);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -67,5 +69,11 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  a {
+    color: lightgrey;
   }
 }
